--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --mode=development",
+    "build": "webpack build --mode=production",
     "test:unit": "jest",
     "coverage": "npm run test:unit -- --coverage",
     "test:e2e": "codeceptjs run --steps",
     "test": "npm run coverage && start-server-and-test start http://localhost:8080 test:e2e",
     "lint": "eslint --ext js,jsx .",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "build": "webpack build"
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -34,8 +34,10 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "given2": "^2.1.7",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^26.6.3",
     "jest-plugin-context": "^2.9.0",
+    "process": "^0.11.10",
     "puppeteer": "^9.1.1",
     "redux-mock-store": "^1.5.4",
     "start-server-and-test": "^1.12.2",
@@ -48,6 +50,9 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@reduxjs/toolkit": "^1.7.1",
+    "copy-webpack-plugin": "^10.2.4",
+    "dotenv": "^16.0.0",
+    "env-cmd": "^10.1.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -55,6 +60,5 @@
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.3.0"
-  },
-  "homepage": "https://codesoom.github.io/project-react-6-eunseo-kim/"
+  }
 }
