--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^26.6.3",
     "jest-plugin-context": "^2.9.0",
+    "jest-svg-transformer": "^1.0.0",
     "process": "^0.11.10",
     "puppeteer": "^9.1.1",
     "redux-mock-store": "^1.5.4",
